--- a/social-media-hits.html
+++ b/social-media-hits.html
@@ -5,43 +5,148 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media Hits</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <nav class="navbar">
-        <div class="logo">Musify</div>
-    </nav>
+<body onclick="closePlayer(event)">
+    <div id="content">
+        <nav class="navbar">
+            <div class="logo">Musify</div>
+        </nav>
 
-    <div class="playlist-details">
-        <div class="playlist-inside">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-1AAIS0QGX6Yd3_9yr3GPLRKhw4QMELFNig&s" alt="Social Media Hits">
-            <div class="text-container">
-                <h2>Social Media Hits</h2>
-                <h3>Duration: </h3>
+        <div class="playlist-details">
+            <div class="playlist-inside">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-1AAIS0QGX6Yd3_9yr3GPLRKhw4QMELFNig&s" alt="Social Media Hits">
+                <div class="text-container">
+                    <h2 class="description">Social Media Hits</h2>
+                    <h3><span class="description">Duration:</span> 21:04</h3>
+                    <h3><span class="description">Artists:</span> Arijit Singh, Anurag Saikia, Amit Trivedi, Sohail Sen</h3>
+                </div>
             </div>
+            <ul class="song-list">
+                <div class="songs-individual" onclick="openPlayer(event, 0)">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-1AAIS0QGX6Yd3_9yr3GPLRKhw4QMELFNig&s" class="song-img">
+                    <li class="clickable">Mera Chehra</li>
+                    <div class="artist">Arijit Singh</div>
+                    <p>4:34</p>
+                </div>
+                <div class="songs-individual" onclick="openPlayer(event, 1)">
+                    <img src="https://c.saavncdn.com/839/Mismatched-Season-3-Soundtrack-from-the-Netflix-Series-Hindi-2024-20241217204803-500x500.jpg" class="song-img">
+                    <li class="clickable">Ishq Hai</li>
+                    <div class="artist">Anurag Saikia</div>
+                    <p>5:12</p>
+                </div>
+                <div class="songs-individual" onclick="openPlayer(event, 2)">
+                    <img src="https://c.saavncdn.com/878/Sooiyan-From-Guddu-Rangeela--Hindi-2015-20200806151831-500x500.jpg" class="song-img">
+                    <li class="clickable">Sooiya</li>
+                    <div class="artist">Amit Trivedi</div>
+                    <p>4:01</p>
+                </div>
+                <div class="songs-individual" onclick="openPlayer(event, 3)">
+                    <img src="https://c.saavncdn.com/461/Maharaj-Hindi-2024-20240622100909-500x500.jpg" class="song-img">
+                    <li class="clickable">Haan ke Haan</li>
+                    <div class="artist">Sohail Sen</div>
+                    <p>3:24</p>
+                </div>
+                <div class="songs-individual" onclick="openPlayer(event, 4)">
+                    <img src="https://i.scdn.co/image/ab67616d0000b273ff602926eb81f594fc034034" class="song-img">
+                    <li class="clickable">Uyi Amma</li>
+                    <div class="artist">Amit Trivedi</div>
+                    <p>4:13</p>
+                </div>
+            </ul>
         </div>
-        <ul class="song-list">
-            <div class="songs-individual">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-1AAIS0QGX6Yd3_9yr3GPLRKhw4QMELFNig&s" class="song-img">
-                <li>Mera Chehra</li>
-                <div class="artist">Arijit Singh</div>
-                <p>4:34</p>
-            </div>
-            <li>Ishq Hai</li>
-            <li>Sooiya</li>
-            <li>Haan ke Haan</li>
-            <li>Uyi Amma</li>
-        </ul>
     </div>
 
-    <div id="flashcard" class="flashcard">
-        <div class="flashcard-content">
-            <span class="close-btn">&times;</span>
-            <img id="flashcard-img" src="" alt="Song Image">
-            <h2 id="flashcard-title"></h2>
-            <p id="flashcard-artist"></p>
+    <div class="floating-player" id="player">
+        <img id="player-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-1AAIS0QGX6Yd3_9yr3GPLRKhw4QMELFNig&s" alt="Mera Chehra">
+        <p id="player-song-title">Mera Chehra - Arijit Singh</p>
+        <input type="range" min="0" max="100" value="0" id="progress-bar">
+        <div class="controls">
+            <button onclick="prevSong()"><i class="fa-solid fa-backward"></i></button>
+            <button onclick="togglePlayPause()"><i class="fa-solid fa-play" id="playPauseIcon"></i></button>
+            <button onclick="nextSong()"><i class="fa-solid fa-forward"></i></button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        let currentSongIndex = 0;
+        const songs = [
+            {
+                title: 'Mera Chehra',
+                artist: 'Arijit Singh',
+                imgSrc: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-1AAIS0QGX6Yd3_9yr3GPLRKhw4QMELFNig&s',
+                duration: '4:34'
+            },
+            {
+                title: 'Ishq Hai',
+                artist: 'Anurag Saikia',
+                imgSrc: 'https://c.saavncdn.com/839/Mismatched-Season-3-Soundtrack-from-the-Netflix-Series-Hindi-2024-20241217204803-500x500.jpg',
+                duration: '5:12'
+            },
+            {
+                title: 'Sooiya',
+                artist: 'Amit Trivedi',
+                imgSrc: 'https://c.saavncdn.com/878/Sooiyan-From-Guddu-Rangeela--Hindi-2015-20200806151831-500x500.jpg',
+                duration: '4:01'
+            },
+            {
+                title: 'Haan ke Haan',
+                artist: 'Sohail Sen',
+                imgSrc: 'https://c.saavncdn.com/461/Maharaj-Hindi-2024-20240622100909-500x500.jpg',
+                duration: '3:24'
+            },
+            {
+                title: 'Uyi Amma',
+                artist: 'Amit Trivedi',
+                imgSrc: 'https://i.scdn.co/image/ab67616d0000b273ff602926eb81f594fc034034',
+                duration: '4:13'
+            }
+        ];
+
+        function openPlayer(event, songIndex) {
+            event.stopPropagation();
+            currentSongIndex = songIndex;
+            
+            // Update the floating player with the selected song's details
+            const song = songs[currentSongIndex];
+            document.getElementById("player-img").src = song.imgSrc;
+            document.getElementById("player-song-title").textContent = `${song.title} - ${song.artist}`;
+            document.getElementById("player").style.display = "block";
+            document.getElementById("content").classList.add("blur");
+        }
+
+        function closePlayer(event) {
+            if (!document.getElementById("player").contains(event.target)) {
+                document.getElementById("player").style.display = "none";
+                document.getElementById("content").classList.remove("blur");
+            }
+        }
+
+        function togglePlayPause() {
+            let icon = document.getElementById("playPauseIcon");
+            if (icon.classList.contains("fa-play")) {
+                icon.classList.remove("fa-play");
+                icon.classList.add("fa-pause");
+            } else {
+                icon.classList.remove("fa-pause");
+                icon.classList.add("fa-play");
+            }
+        }
+
+        function prevSong() {
+            currentSongIndex = (currentSongIndex === 0) ? songs.length - 1 : currentSongIndex - 1;
+            const song = songs[currentSongIndex];
+            document.getElementById("player-img").src = song.imgSrc;
+            document.getElementById("player-song-title").textContent = `${song.title} - ${song.artist}`;
+        }
+
+        function nextSong() {
+            currentSongIndex = (currentSongIndex === songs.length - 1) ? 0 : currentSongIndex + 1;
+            const song = songs[currentSongIndex];
+            document.getElementById("player-img").src = song.imgSrc;
+            document.getElementById("player-song-title").textContent = `${song.title} - ${song.artist}`;
+        }
+    </script>
 </body>
 </html>
